--- a/app/src/main/res/layout/assignment_recycler_item.xml
+++ b/app/src/main/res/layout/assignment_recycler_item.xml
@@ -57,6 +57,7 @@
                 android:maxLines="1"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textSize="20sp"
+                android:textColor="@color/primary_text"
                 app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/profile_picture"
