--- a/app/src/main/res/layout/assignment_recycler_item_first.xml
+++ b/app/src/main/res/layout/assignment_recycler_item_first.xml
@@ -47,6 +47,7 @@
             android:maxLines="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textSize="30sp"
+            android:textColor="@color/primary_text"
             app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/profile_picture"
@@ -59,6 +60,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/finish_clean"
+            android:textColor="@color/text"
+
             android:focusableInTouchMode="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
