--- a/app/src/main/res/layout/dialog_create_flat.xml
+++ b/app/src/main/res/layout/dialog_create_flat.xml
@@ -2,18 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="16dp"
+    android:layout_marginBottom="8dp"
+    android:paddingHorizontal="30dp">
 
-    <TextView
-        android:id="@+id/create_flat_dialog_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/name_of_flat"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 
     <EditText
         android:id="@+id/create_flat_dialog_edit_text"
@@ -21,10 +16,15 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="text"
-        android:textSize="14sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_flat_dialog_title"
-        android:autofillHints="@string/name_of_flat"
-        android:labelFor="@id/create_flat_dialog_edit_text"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
+        android:textColorHint="@drawable/selector"
+        android:hint="@string/name_of_flat"
+        android:labelFor="@id/create_flat_dialog_edit_text" />
 </androidx.constraintlayout.widget.ConstraintLayout>
