--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,9 +13,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="40sp"
-        android:textStyle="bold"
         android:paddingTop="16dp"
         tools:text="ABCD"
+        android:textColor="@color/primary_text"
         />
 
 
