--- a/app/src/main/res/layout/fragment_join_flat.xml
+++ b/app/src/main/res/layout/fragment_join_flat.xml
@@ -6,24 +6,111 @@
     android:layout_height="match_parent"
     tools:context=".JoinFlatFragment">
 
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Join your flatmates or create new flat"
+        android:textSize="20dp"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+
+
+
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:backgroundTint="@color/divider"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
+
+
+
+    <EditText
+        android:id="@+id/flat_code_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="5"
+        android:hint="@string/flat_code"
+        android:textAllCaps="true"
+        android:textColor="@color/primary_text"
+        android:inputType="textVisiblePassword"
+        android:textColorHint="@drawable/selector"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/join_flat_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
     <Button
         android:background="@drawable/button_style"
         android:id="@+id/join_flat_button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/join_flat"
         android:textSize="15sp"
         android:textAllCaps="false"
         android:paddingHorizontal="20dp"
         android:textColor="@color/text"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/or1"
         app:layout_constraintEnd_toEndOf="@+id/create_new_flat_button"
         app:layout_constraintStart_toStartOf="@+id/create_new_flat_button" />
+
+    <TextView
+        android:id="@+id/or1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/qr_scan"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/secondary_text"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:layout_marginBottom="32dp"
+        android:text="or"/>
+
+    <Button
+        android:background="@drawable/button_style"
+        android:id="@+id/qr_scan"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:text="Scan QR Code"
+        android:paddingHorizontal="20dp"
+        android:textSize="15sp"
+        android:textColor="@color/text"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toTopOf="@id/or2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+
+    <TextView
+        android:id="@+id/or2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/create_new_flat_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/secondary_text"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:layout_marginBottom="32dp"
+        android:text="or"/>
 
     <Button
         android:background="@drawable/button_style"
         android:id="@+id/create_new_flat_button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
@@ -34,41 +121,6 @@
         android:textColor="@color/text"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:backgroundTint="@color/divider"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/join_flat_button"
-        app:layout_constraintBottom_toTopOf="@id/create_new_flat_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textColor="@color/primary_text"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:text="or"/>
-
-    <EditText
-        android:id="@+id/flat_code_edit_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="5"
-        android:hint="@string/flat_code"
-        android:textAllCaps="true"
-        android:textColor="@color/secondary_text"
-        android:inputType="textVisiblePassword"
-        android:textColorHint="@color/primary_text"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/join_flat_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
